--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,8 +18,11 @@ jobs:
       with:
         go-version: 1.15
 
-    - name: Test
-      run: |
-        go test -short ./...
-        go test ./... -run RandomizeFast -count=512
-        go test ./... -run RandomizeSlow -count=32
+    - name: Short test
+      run: go test -short -v ./...
+
+    - name: Randomized test suite 1
+      run: go test -v ./... -run RandomizeFast -count=512
+
+    - name: Randomized test suite 2
+      run: go test -v ./... -run RandomizeSlow -count=32
